# db-inspector

./: README.md
client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
client/public/: manifest.json
client/src/: main.tsx  styles.css
client/src/components/: Dialog.tsx  Editor.tsx  Table.tsx  Tooltip.tsx
client/src/routes/: index.tsx
client/src/utils/: api.ts  hooks.ts
server/: config.py  database.py  main.py  models.py  pyproject.toml  service.py  sql_pipeline.py
server/demo/: Chinook.db
